--- a/config/locales/views/categories/fr.yml
+++ b/config/locales/views/categories/fr.yml
@@ -14,6 +14,16 @@ fr:
       edit: Éditer la catégorie
     form:
       placeholder: Nom de la catégorie
+      color: Couleur
+      icon: Icône
+      classification: Classification
+      name: Nom
+      parent_category: Catégorie parente (facultatif)
+      unassigned: "(non assigné)"
+      income: Revenu
+      expense: Dépense
+      poor_contrast: Contraste faible, choisissez une couleur plus foncée ou
+      auto_adjust: ajuster automatiquement.
     index:
       bootstrap: Utiliser les valeurs par défaut (recommandé)
       categories: Catégories
@@ -21,6 +31,7 @@ fr:
       categories_incomes: Catégories de revenus
       empty: Aucune catégorie trouvée
       new: Nouvelle catégorie
+      delete_all: Tout supprimer
     menu:
       loading: Chargement...
     new:
@@ -32,3 +43,6 @@ fr:
       show:
         bootstrap: Générer les catégories par défaut
         empty: Aucune catégorie trouvée
+        match_transfer: Associer virement/paiement
+        one_time_income: Revenu ponctuel
+        one_time_expense: Dépense ponctuelle
