--- a/config/locales/views/loans/en.yml
+++ b/config/locales/views/loans/en.yml
@@ -8,6 +8,9 @@ en:
       interest_rate_placeholder: '5.25'
       initial_balance: Original loan balance
       rate_type: Rate type
+      rate_type_fixed: Fixed
+      rate_type_variable: Variable
+      rate_type_adjustable: Adjustable
       term_months: Term (months)
       term_months_placeholder: '360'
     new:
@@ -21,3 +24,4 @@ en:
       term: Term
       type: Type
       unknown: Unknown
+      edit_loan_details: Edit loan details
