--- a/config/locales/views/tags/fr.yml
+++ b/config/locales/views/tags/fr.yml
@@ -11,6 +11,8 @@ fr:
     form:
       placeholder: Nom de l'étiquette
     index:
+      delete_all: Tout supprimer
+      all_tags: toutes les étiquettes
       empty: Aucune étiquette pour le moment
       new: Nouvelle étiquette
       tags: Étiquettes
