--- a/config/locales/views/credit_cards/fr.yml
+++ b/config/locales/views/credit_cards/fr.yml
@@ -23,3 +23,4 @@ fr:
       expiration_date: Date d'expiration
       minimum_payment: Paiement minimum
       unknown: Inconnu
+      edit_account_details: Modifier les détails du compte
