--- a/config/locales/views/holdings/en.yml
+++ b/config/locales/views/holdings/en.yml
@@ -16,6 +16,7 @@ en:
       provider: From provider
     cost_basis_cell:
       unknown: "--"
+      set: Set
       set_cost_basis_header: "Set cost basis for %{ticker} (%{qty} shares)"
       total_cost_basis_label: Total cost basis
       or_per_share_label: "Or enter per share:"
@@ -61,3 +62,6 @@ en:
       unlock_cost_basis: Unlock
       unlock_confirm_title: Unlock cost basis?
       unlock_confirm_body: This will allow the cost basis to be updated by provider syncs or trade calculations.
+      no_trade_history: No trade history available for this holding.
+    new:
+      coming_soon: Coming soon...
