--- a/config/locales/views/settings/fr.yml
+++ b/config/locales/views/settings/fr.yml
@@ -5,6 +5,7 @@ fr:
       show:
         page_title: Prompts IA
         openai_label: OpenAI
+        disable_ai: Désactiver l'assistant IA
         prompt_instructions: Instructions pour les prompts
         main_system_prompt:
           title: Prompt Système Principal
@@ -20,6 +21,15 @@ fr:
         page_title: Facturation
         subscription_subtitle: Mettez à jour votre abonnement et vos détails de facturation
         subscription_title: Gérer l'abonnement
+        subscribed: "Vous êtes actuellement abonné au %{plan}."
+        renews_on: "Votre abonnement se renouvelle le %{date}."
+        trialing: "Vous êtes actuellement en période d'essai de %{product}"
+        days_remaining: "(%{days} jours restants)"
+        not_subscribed: "Vous n'êtes actuellement pas abonné"
+        subscribe_cta: "Une fois abonné à %{product}, vos paramètres de facturation apparaîtront ici."
+        manage: Gérer
+        choose_plan: Choisir un plan
+        billing_via_stripe: Facturation via Stripe
     preferences:
       show:
         country: Pays
@@ -37,6 +47,7 @@ fr:
         theme_system: Système
         theme_title: Thème
         timezone: Fuseau horaire
+        translations_note: Veuillez noter que nous travaillons encore sur les traductions pour diverses langues.
     profiles:
       destroy:
         cannot_remove_self: Vous ne pouvez pas vous enlever de votre compte.
@@ -67,6 +78,8 @@ fr:
         reset_account_with_sample_data: Réinitialiser et précharger
         reset_account_with_sample_data_warning: Supprime toutes vos données existantes puis charge des données d'exemple afin que vous puissiez explorer avec un environnement pré-rempli.
         email: E-mail
+        unconfirmed_email_notice_html: "Vous avez demandé à changer votre email pour %{email}. Veuillez consulter vos emails et confirmer pour que le changement prenne effet. Si vous n'avez pas reçu l'email, vérifiez votre dossier spam, ou %{link}."
+        resend_confirmation_link: demandez un nouvel email de confirmation
         first_name: Prénom
         household_form_input_placeholder: Entrez le nom du foyer
         household_form_label: Nom du foyer
@@ -85,7 +98,30 @@ fr:
     securities:
       show:
         page_title: Sécurité
+        mfa_title: Authentification à deux facteurs
+        mfa_description: Ajoutez une couche de sécurité supplémentaire à votre compte en exigeant un code de votre application d'authentification lors de la connexion
+        mfa_enabled_html: L'authentification à deux facteurs est <span class="font-medium text-green-600">activée</span>
+        mfa_enabled_description: Votre compte est protégé par une couche de sécurité supplémentaire.
+        mfa_disabled_html: L'authentification à deux facteurs est <span class="font-medium text-red-600">désactivée</span>
+        mfa_disabled_description: Activez l'A2F pour ajouter une couche de sécurité supplémentaire à votre compte.
+        enable_mfa: Activer l'A2F
+        disable_mfa: Désactiver l'A2F
+        disable_mfa_confirm: Êtes-vous sûr(e) de vouloir désactiver l'authentification à deux facteurs ?
+        sso_title: Comptes connectés
+        sso_subtitle: Gérez vos connexions de comptes SSO
+        sso_disconnect: Déconnecter
+        sso_last_used: Dernière utilisation
+        sso_never: Jamais
+        sso_no_email: Pas d'email
+        sso_no_identities: Aucun compte SSO connecté
+        sso_connect_hint: Déconnectez-vous et connectez-vous avec un fournisseur SSO pour lier un compte.
+        sso_confirm_title: Déconnecter le compte ?
+        sso_confirm_body: Êtes-vous sûr(e) de vouloir déconnecter votre compte %{provider} ? Vous pourrez le reconnecter plus tard en vous connectant à nouveau avec ce fournisseur.
+        sso_confirm_button: Déconnecter
+        sso_warning_message: Ceci est votre seule méthode de connexion. Vous devriez définir un mot de passe dans vos paramètres de sécurité avant de vous déconnecter, sinon vous risquez d'être bloqué(e) hors de votre compte.
     settings_nav:
+      esc: échap
+      back: Retour
       accounts_label: Comptes
       advanced_section_title: Avancé
       ai_prompts_label: Prompts IA
@@ -101,19 +137,41 @@ fr:
       other_section_title: Plus
       preferences_label: Préférences
       profile_label: Informations du profil
+      recurring_transactions_label: Récurrentes
       rules_label: Règles
       security_label: Sécurité
       self_hosting_label: Auto-hébergement
       tags_label: Étiquettes
       transactions_section_title: Transactions
       whats_new_label: Dernières nouvelles
+      simplefin_label: SimpleFin
       api_keys_label: Clés API
-      bank_sync_label: Synchronisation de la banque
+      bank_sync_label: Synchronisation bancaire
+      llm_usage_label: Utilisation LLM
+      providers_label: Fournisseurs
+      sso_providers_label: Fournisseurs SSO
+      users_label: Utilisateurs
     settings_nav_link_large:
       next: Suivant
       previous: Précédent
+      back: Retour
     user_avatar_field:
       accepted_formats: JPG ou PNG. 5MB max.
       choose: Charger une photo
       choose_label: (facultatif)
       change: Changer de photo
+      preview_alt: Aperçu
+    bank_sync:
+      show:
+        page_title: Synchronisation bancaire
+        providers: Fournisseurs
+        no_providers: Aucun fournisseur configuré
+        configure_providers: Configurez des fournisseurs pour lier vos comptes bancaires.
+        lunchflow_description: "États-Unis, Canada, Royaume-Uni, UE, Brésil et Asie via plusieurs fournisseurs d'open banking."
+        plaid_description: "Connexions bancaires États-Unis et Canada avec transactions, investissements et passifs."
+        simplefin_description: "Connexions États-Unis et Canada via le protocole SimpleFIN."
+        enable_banking_name: "Enable Banking (bêta)"
+        enable_banking_description: "Connexions bancaires européennes via les API d'open banking dans plusieurs pays."
+    guides:
+      show:
+        page_title: Guides
