--- a/config/locales/views/tags/en.yml
+++ b/config/locales/views/tags/en.yml
@@ -11,6 +11,7 @@ en:
     form:
       placeholder: Tag name
     index:
+      delete_all: Delete all
       empty: No tags yet
       new: New tag
       tags: Tags
@@ -21,3 +22,7 @@ en:
       edit: Edit
     update:
       updated: Tag updated
+  tag:
+    deletions:
+      new:
+        delete_and_reassign: Delete and reassign
