--- a/config/locales/views/valuations/en.yml
+++ b/config/locales/views/valuations/en.yml
@@ -28,3 +28,28 @@ en:
       note_placeholder: Add any additional details about this entry
       overview: Overview
       settings: Settings
+      account_value_on_date: Account value on date
+      update_value: Update value
+    confirm_create:
+      title: Confirm new balance
+      confirm: Confirm
+    confirm_update:
+      title: Update balance
+      update: Update
+    confirmation_contents:
+      investment_intro: "This will %{action} the account value on %{date} to:"
+      total_account_value: Total account value
+      holdings_value: Holdings value
+      brokerage_cash: Brokerage cash
+      account_balance: account balance
+      credit_card_balance: credit card balance
+      loan_balance: loan balance
+      property_value: property value
+      vehicle_value: vehicle value
+      crypto_balance: crypto balance
+      asset_value: asset value
+      liability_balance: liability balance
+      balance: balance
+      on_date_to: "on %{date} to %{amount}."
+      recalculation_change: All future transactions and balances will be recalculated based on this change.
+      recalculation_update: All future transactions and balances will be recalculated based on this update.
